# Harbinger

./: .gitignore  AI_INTEGRATION_SUMMARY.md  PHASE4_SUMMARY.md  README.md  STATUS.md  go.mod  go.sum  harbinger.py  main.go  mainart.txt  notice.txt  requirements.txt  setup_project_structure.sh  vulnx.py
.github/hooks/: pre-commit
.github/workflows/: bandit.yml  codeql.yml
BinaryHunter/: binary_hunter.py  exe.py
BinaryHunter/bin_venv/: pyvenv.cfg
BinaryHunter/exe/: exe.py  scan_report.html  scan_report.xml
BinaryHunter/signatures/: custom_rules.yar
Network Tools/port_scan/: porter.py
NetworkSentinel/port_scan/: art.txt  scan_results.txt
NetworkSentinel/sent_env/: pyvenv.cfg
Pilot/BinaryHunter/: requirements.txt
Web App Tools/: web_crawl.py
ai/: start.py
ai/llm_env/: pyvenv.cfg
cmd/: root.go
configs/: payload_config.py  scanner_config.py
docs/: DEVELOPMENT.md
harbinger/: README.md  pyproject.toml
harbinger/modules/common/: base_scanner.py
harbinger/modules/malware_scanner/: scanner.py
harbinger/src/: main.py
harbinger/src/cli/: command_handler.py
harbinger/src/core/: module_loader.py
internal/ai/: client.go  keystore.go  prompts.go  providers.go  service.go
internal/comparison/: compare.go
internal/export/: export.go
internal/models/: scan.go
internal/performance/: monitor.go
licenses/: llama2.md
net_discovery/: art.txt  net.py
os_detect/: cosdec  cosdec.c  n_osdec.py  osdec.py
port_scan/: cporter  cporter.c  goporter.go  porter.py  scan_results.txt
scanner/: crawler.py
vulnerabilities/: base.py
(+88 files in other folders)
